tests/rosetta/out/C/bitmap-ppm-conversion-through-a-pipe.error
cc: exit status 1
/tmp/bitmap-ppm-conversion-through-a-pipe.c:38:3: error: unknown type name ‘list_int’
   38 |   list_int px;
      |   ^~~~~~~~
/tmp/bitmap-ppm-conversion-through-a-pipe.c: In function ‘pixelFromRgb’:
/tmp/bitmap-ppm-conversion-through-a-pipe.c:59:21: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘r’
   59 |   return (pixel_t){.r = r, .g = g, .b = b};
      |                     ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:59:29: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘g’
   59 |   return (pixel_t){.r = r, .g = g, .b = b};
      |                             ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:59:37: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘b’
   59 |   return (pixel_t){.r = r, .g = g, .b = b};
      |                                     ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c: In function ‘rgbFromPixel’:
/tmp/bitmap-ppm-conversion-through-a-pipe.c:62:40: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘r’
   62 | int rgbFromPixel(pixel_t *p) { return p->r * 65536 + p->g * 256 + p->b; }
      |                                        ^~
/tmp/bitmap-ppm-conversion-through-a-pipe.c:62:55: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘g’
   62 | int rgbFromPixel(pixel_t *p) { return p->r * 65536 + p->g * 256 + p->b; }
      |                                                       ^~
/tmp/bitmap-ppm-conversion-through-a-pipe.c:62:68: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘b’
   62 | int rgbFromPixel(pixel_t *p) { return p->r * 65536 + p->g * 256 + p->b; }
      |                                                                    ^~
/tmp/bitmap-ppm-conversion-through-a-pipe.c: In function ‘NewBitmap’:
/tmp/bitmap-ppm-conversion-through-a-pipe.c:74:37: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘r’
   74 |       tmp1.data[r.len] = (pixel_t){.r = 0, .g = 0, .b = 0};
      |                                     ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:74:45: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘g’
   74 |       tmp1.data[r.len] = (pixel_t){.r = 0, .g = 0, .b = 0};
      |                                             ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:74:53: error: ‘pixel_t’ {aka ‘struct pixel_t’} has no member named ‘b’
   74 |       tmp1.data[r.len] = (pixel_t){.r = 0, .g = 0, .b = 0};
      |                                                     ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:79:5: error: ‘data’ undeclared (first use in this function)
   79 |     data = 0;
      |     ^~~~
/tmp/bitmap-ppm-conversion-through-a-pipe.c:79:5: note: each undeclared identifier is reported only once for each function it appears in
/tmp/bitmap-ppm-conversion-through-a-pipe.c: In function ‘FillRgb’:
/tmp/bitmap-ppm-conversion-through-a-pipe.c:92:27: error: request for member ‘data’ in something not a structure or union
   92 |       __auto_type row = px.data[y];
      |                           ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:93:7: error: ‘row’ undeclared (first use in this function)
   93 |       row.data[x] = p;
      |       ^~~
/tmp/bitmap-ppm-conversion-through-a-pipe.c:94:9: error: request for member ‘data’ in something not a structure or union
   94 |       px.data[y] = row;
      |         ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c: In function ‘SetPxRgb’:
/tmp/bitmap-ppm-conversion-through-a-pipe.c:107:23: error: request for member ‘data’ in something not a structure or union
  107 |   __auto_type row = px.data[y];
      |                       ^
/tmp/bitmap-ppm-conversion-through-a-pipe.c:108:3: error: ‘row’ undeclared (first use in this function)
  108 |   row.data[x] = pixelFromRgb(c);
      |   ^~~
/tmp/bitmap-ppm-conversion-through-a-pipe.c:109:5: error: request for member ‘data’ in something not a structure or union
  109 |   px.data[y] = row;
      |     ^
